--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container-fluid p-0">
       <header>
-        <nav class="navbar navbar-expand-lg ps-5 py-3">
+        <nav class="navbar navbar-expand-md ps-5 py-3">
           <span class="navbar-brand">elaxo</span>
           <button
             class="navbar-toggler pe-3"
@@ -69,7 +69,7 @@
         </nav>
       </header>
 
-      <div class="main">
+      <section class="main">
         <div class="container">
           <div class="row pt-1 align-items-center">
             <div class="info col-md-6">
@@ -85,16 +85,16 @@
             </div>
             <div class="col-md-6 text-right hero-image">
               <img
-                src="./material/assets/images/phone.png"
+                src="../material/assets/images/phone.png"
                 alt="Phone Image"
               />
             </div>
           </div>
         </div>
         <div class="btn overlay">Contact Us</div>
-      </div>
+      </section>
 
-      <div class="feature">
+      <section class="feature">
         <div class="container">
           <div class="feature-title pt-5 text-center">
             <span class="badge mt-2">DISCOVER</span>
@@ -111,7 +111,7 @@
                       d-flex
                       justify-content-center
                       align-items-center
-                      me-3
+                      me-4
                     "
                   >
                     <i class="fa fa-music"></i>
@@ -135,7 +135,7 @@
                       d-flex
                       justify-content-center
                       align-items-center
-                      me-3
+                      me-4
                     "
                   >
                     <i class="fa fa-list-ol"></i>
@@ -159,7 +159,7 @@
                       d-flex
                       justify-content-center
                       align-items-center
-                      me-3
+                      me-4
                     "
                   >
                     <i class="fa fa-star"></i>
@@ -183,7 +183,7 @@
                       d-flex
                       justify-content-center
                       align-items-center
-                      me-3
+                      me-4
                     "
                   >
                     <i class="fa fa-heartbeat"></i>
@@ -207,7 +207,7 @@
                       d-flex
                       justify-content-center
                       align-items-center
-                      me-3
+                      me-4
                     "
                   >
                     <i class="fa fa-random"></i>
@@ -247,16 +247,181 @@
                 </div>
               </div>
             </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="col-lg-4 d-flex">
+                            <div class="wrapper-icon">
+                              <div
+                                class="
+                                  icon
+                                  d-flex
+                                  justify-content-center
+                                  align-items-center
+                                  me-4
+                                "
+                              >
+                                <i class="fa fa-music"></i>
+                              </div>
+                            </div>
+
+                            <div class="desc">
+                              <h4 class="desc-title">HD Sounds</h4>
+                              <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Distinctio deleniti amet dolor cumque!
+                              </p>
+                            </div>
+                          </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="col-lg-4 d-flex">
+                            <div class="wrapper-icon">
+                              <div
+                                class="
+                                  icon
+                                  d-flex
+                                  justify-content-center
+                                  align-items-center
+                                  me-4
+                                "
+                              >
+                                <i class="fa fa-list-ol"></i>
+                              </div>
+                            </div>
+
+                            <div class="desc">
+                              <h4 class="desc-title">Playlist</h4>
+                              <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Distinctio deleniti amet dolor cumque!
+                              </p>
+                            </div>
+                          </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="col-lg-4 d-flex">
+                            <div class="wrapper-icon">
+                              <div
+                                class="
+                                  icon
+                                  d-flex
+                                  justify-content-center
+                                  align-items-center
+                                  me-4
+                                "
+                              >
+                                <i class="fa fa-star"></i>
+                              </div>
+                            </div>
+
+                            <div class="desc">
+                              <h4 class="desc-title">Favorite</h4>
+                              <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Distinctio deleniti amet dolor cumque!
+                              </p>
+                            </div>
+                          </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="col-lg-4 d-flex">
+                            <div class="wrapper-icon">
+                              <div
+                                class="
+                                  icon
+                                  d-flex
+                                  justify-content-center
+                                  align-items-center
+                                  me-4
+                                "
+                              >
+                                <i class="fa fa-heartbeat"></i>
+                              </div>
+                            </div>
+
+                            <div class="desc">
+                              <h4 class="desc-title">Mood Detector</h4>
+                              <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Distinctio deleniti amet dolor cumque!
+                              </p>
+                            </div>
+                          </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="col-lg-4 d-flex">
+                            <div class="wrapper-icon">
+                              <div
+                                class="
+                                  icon
+                                  d-flex
+                                  justify-content-center
+                                  align-items-center
+                                  me-4
+                                "
+                              >
+                                <i class="fa fa-random"></i>
+                              </div>
+                            </div>
+
+                            <div class="desc">
+                              <h4 class="desc-title">Shuffle</h4>
+                              <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Distinctio deleniti amet dolor cumque!
+                              </p>
+                            </div>
+                          </div>
+                </div>
+
+                <div class="carousel-item"><div class="col-lg-4 d-flex">
+                            <div class="wrapper-icon">
+                              <div
+                                class="
+                                  icon
+                                  d-flex
+                                  justify-content-center
+                                  align-items-center
+                                  me-3
+                                "
+                              >
+                                <i class="fa fa-hourglass-start"></i>
+                              </div>
+                            </div>
+
+                            <div class="desc">
+                              <h4 class="desc-title">Timer</h4>
+                              <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Distinctio deleniti amet dolor cumque!
+                              </p>
+                            </div>
+                          </div></div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="profile">
+      <section class="profile">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 img">
               <img
-                src="./material/assets/images/phone2.png"
+                src="../material/assets/images/phone2.png"
                 alt="Phone image"
               />
             </div>
@@ -280,7 +445,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <div class="review">
         <div class="container px-5">
@@ -323,7 +488,7 @@
         </div>
       </div>
 
-      <div class="banner">
+      <section class="banner">
         <div class="container">
           <div class="row d-flex justify-content-between">
             <div class="col-md-3 align-items-center">
@@ -344,9 +509,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="download">
+      <section class="download">
         <div class="container">
           <div class="row d-flex align-items-center justify-content-between">
             <div class="col-md-6">
@@ -360,27 +525,27 @@
                 quod.
               </p>
               <img
-                src="./material/assets/images/google play.png"
+                src="../material/assets/images/google play.png"
                 alt="Google Play Image"
                 class="me-1 play-store"
               />
               <img
-                src="./material/assets/images/app-store.png"
+                src="../material/assets/images/app-store.png"
                 alt="App Store Image "
                 class="app-store"
               />
             </div>
             <div class="col-md-6 d-flex justify-content-center">
               <img
-                src="./material/assets/images/female.png"
+                src="../material/assets/images/female.png"
                 alt="Female Image"
               />
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="footer">
+      <footer>
         <div class="container pt-5">
           <div class="row d-flex justify-content-between">
             <div class="col-md-2 logo"><h4>elaxo</h4></div>
@@ -428,7 +593,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </footer>
     </div>
 
     <script
