fix : link image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-6 text-right hero-image">
               <img
-                src="../material/assets/images/phone.png"
+                src="./material/assets/images/phone.png"
                 alt="Phone Image"
               />
             </div>
@@ -421,7 +421,7 @@
           <div class="row align-items-center">
             <div class="col-md-6 img">
               <img
-                src="../material/assets/images/phone2.png"
+                src="./material/assets/images/phone2.png"
                 alt="Phone image"
               />
             </div>
@@ -525,19 +525,19 @@
                 quod.
               </p>
               <img
-                src="../material/assets/images/google play.png"
+                src="./material/assets/images/google play.png"
                 alt="Google Play Image"
                 class="me-1 play-store"
               />
               <img
-                src="../material/assets/images/app-store.png"
+                src="./material/assets/images/app-store.png"
                 alt="App Store Image "
                 class="app-store"
               />
             </div>
             <div class="col-md-6 d-flex justify-content-center">
               <img
-                src="../material/assets/images/female.png"
+                src="./material/assets/images/female.png"
                 alt="Female Image"
               />
             </div>
