--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-6 text-right hero-image">
               <img
-                src="./material/assets/images/phone.png"
+                src="../material/assets/images/phone.png"
                 alt="Phone Image"
               />
             </div>
@@ -266,7 +266,7 @@
                                   d-flex
                                   justify-content-center
                                   align-items-center
-                                  me-4
+                                  mb-2
                                 "
                               >
                                 <i class="fa fa-music"></i>
@@ -292,7 +292,7 @@
                                   d-flex
                                   justify-content-center
                                   align-items-center
-                                  me-4
+                                  mb-2
                                 "
                               >
                                 <i class="fa fa-list-ol"></i>
@@ -318,7 +318,7 @@
                                   d-flex
                                   justify-content-center
                                   align-items-center
-                                  me-4
+                                  mb-2
                                 "
                               >
                                 <i class="fa fa-star"></i>
@@ -344,7 +344,7 @@
                                   d-flex
                                   justify-content-center
                                   align-items-center
-                                  me-4
+                                  mb-2
                                 "
                               >
                                 <i class="fa fa-heartbeat"></i>
@@ -370,7 +370,7 @@
                                   d-flex
                                   justify-content-center
                                   align-items-center
-                                  me-4
+                                  mb-2
                                 "
                               >
                                 <i class="fa fa-random"></i>
@@ -395,7 +395,7 @@
                                   d-flex
                                   justify-content-center
                                   align-items-center
-                                  me-3
+                                  mb-2
                                 "
                               >
                                 <i class="fa fa-hourglass-start"></i>
@@ -421,7 +421,7 @@
           <div class="row align-items-center">
             <div class="col-md-6 img">
               <img
-                src="./material/assets/images/phone2.png"
+                src="../material/assets/images/phone2.png"
                 alt="Phone image"
               />
             </div>
@@ -525,19 +525,19 @@
                 quod.
               </p>
               <img
-                src="./material/assets/images/google play.png"
+                src="../material/assets/images/google play.png"
                 alt="Google Play Image"
                 class="me-1 play-store"
               />
               <img
-                src="./material/assets/images/app-store.png"
+                src="../material/assets/images/app-store.png"
                 alt="App Store Image "
                 class="app-store"
               />
             </div>
             <div class="col-md-6 d-flex justify-content-center">
               <img
-                src="./material/assets/images/female.png"
+                src="../material/assets/images/female.png"
                 alt="Female Image"
               />
             </div>
